kernel/tests/data/invalid/parameter_shadowing.ck
data Invalid (P : Prop) (P : Prop) : Prop where
  | c : Invalid P P